# tea-bond

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: github_release.yml
.memory/: decisions.md  inbox.md  patterns.md
.zrouter/: config.toml
bond-ffi/: Cargo.toml
bonds_info/: 010504.SH.json  010609.SH.json  010706.SH.json  010713.SH.json  019003.SH.json  019009.SH.json  019014.SH.json  019018.SH.json  019023.SH.json  019026.SH.json  019029.SH.json  019037.SH.json  019040.SH.json  019105.SH.json  019110.SH.json  019110x.SH.json  019112.SH.json  019116.SH.json  019116x.SH.json  019123.SH.json  019206.SH.json  019208.SH.json  019212.SH.json  019213.SH.json  019218.SH.json  019220.SH.json  019305.SH.json  019309.SH.json  019310.SH.json  019311.SH.json  019316.SH.json  019318.SH.json  019319.SH.json  019324.SH.json  019325.SH.json  019405.SH.json  019409.SH.json  019410.SH.json  019412.SH.json  019416.SH.json  (+860 more)
pybond/: CLAUDE.md  Cargo.toml  nb_test.py  pyproject.toml  test.py
pybond/pybond/: CLAUDE.md  __init__.py  bond.py  download.py  pl.py  pnl.py  pybond.pyi
pybond/pybond/ffi/: __init__.py  bond.py  duration.py  evaluators.py  lib.py  utils.py
pybond/pybond/nb/: __init__.py  bond.py  nb_bond.py  nb_date.py  nb_datetime.py  nb_evaluators.py  nb_time.py
pybond/pybond/vec/: evaluators.py
pybond/src/: batch_eval.rs  bond.rs  future.rs  lib.rs  persist.rs  pnl.rs  tf_evaluator.rs  utils.rs
pybond/src/ffi/: bond.rs  datetime.rs  duration.rs  evaluators.rs  mod.rs  utils.rs
pybond/tests/: test_decimal.py
python/: bond_calculator.py  bondattr_retrieve.py  cache.py  download_bond_info.py  fi_objects.py  fi_utils.py  tbond_calculator.py  tf_evaluator.py  tf_td.py
python/prim/: formulas.py  prim_bondcalculator.py
python/ql/: ql_bondcalculator.py
python/testsuite/: test_bond_calc_onql.py  test_bond_calc_onwind.py  test_bond_calc_prim.py  test_bondatrr_retrieve_onwind.py  test_fi_utils.py  test_ib_sse_diff.py  test_prim_formulas.py  test_tf_evaluator.py
python/wind/: wind_algos.py  wind_bondattr.py  wind_bondcalculator.py  wind_context.py
src/: bond.rs  day_counter.rs  export.rs  future.rs  lib.rs  utils.rs
src/bond/: bond_ytm.rs  cached_bond.rs  download.rs  enums.rs  impl_convert.rs  impl_traits.rs  impls.rs  io.rs  mod.rs
src/bond/download/: china_money.rs  mod.rs  sse.rs
src/future/: future_price.rs  future_type.rs  impls.rs  mod.rs
src/tf_evaluator/: evaluator.rs  mod.rs  update_with_new_info.rs
tea-bond/: CLAUDE.md  Cargo.toml
tea-bond/src/: lib.rs
tea-bond/src/bond/: CLAUDE.md  bond_ytm.rs  cached_bond.rs  duck_io.rs  enums.rs  impl_convert.rs  impl_traits.rs  io.rs  mod.rs
tea-bond/src/bond/download/: china_money.rs  sse.rs
tea-bond/src/bond/io/: duck.rs  duckdb.rs  mod.rs  persist.rs  wind_sql_row.rs
tea-bond/src/future/: future_price.rs  future_type.rs  mod.rs
tea-bond/src/pnl/: fee.rs  mod.rs  trade_from_signal.rs
tea-bond/src/tf_evaluator/: evaluator.rs  mod.rs
tea-calendar/: Cargo.toml
tea-calendar/src/calendars/china/: sse.rs
