[package]
name = "tea-bond"
version = "0.1.0"
edition = "2021"
exclude = ["pybond/**"]

[features]
default = ["download"]
download = ["reqwest", "tokio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
compact_str = { version = "0.8", features = ["serde"] }
smart-default = "0.7"
chrono = "0.4"
anyhow = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", optional = true, features = ["json"] }
tokio = { version = "1", features = ["full"], optional = true }
