[package]
name = "pybond"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybond"
crate-type = ["cdylib"]

[features]
default = ["download", "pnl"]
numpy = ["dep:numpy", "tevec/ndarray"]
download = ["tea-bond/download"]
pnl = [
    "tea-bond/pnl",
    "tevec/polars",
    "tevec/polars-struct",
    "tevec/time",
    "pyo3-polars",
    "polars-arrow",
]

[dependencies]
pyo3 = { version = "0.23", features = [
    "chrono",
    "extension-module",
    "abi3-py310",
    "anyhow",
    # "experimental-inspect",
    "multiple-pymethods",
] }
tea-time = { version = "0.5" }
tea-bond = { path = "../tea-bond" }
chrono = { version = "0.4", default-features = false }
numpy = { version = "0.23", optional = true }
tevec = { version = "0.5", optional = true }
pyo3-polars = { version = "0.20", optional = true, features = ["derive"] }
polars-arrow = { version = "0.46", optional = true }
