[package]
name = "pybond"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybond"
crate-type = ["cdylib"]

[features]
default = ["download", "pnl"]
numpy = ["dep:numpy", "tevec/ndarray"]
download = ["tea-bond/download"]
pnl = [
    "tea-bond/pnl",
    "tevec/polars",
    "tevec/polars-struct",
    "tevec/time",
    "pyo3-polars",
]

[dependencies]
tea-time = { workspace = true }
pyo3 = { version = "0.24", features = [
    "chrono",
    "extension-module",
    "abi3-py310",
    "anyhow",
    "multiple-pymethods",
] }
tea-bond = { path = "../tea-bond" }
chrono = { version = "0.4", default-features = false }
numpy = { version = "0.24", optional = true }
# tevec = { version = "0.5", optional = true }
tevec = { git = "https://github.com/teamon9161/tevec.git", rev = "8142290", optional = true }
pyo3-polars = { version = "0.21", optional = true, features = ["derive"] }
